[Tanishtha Yadav] : Added UC11 sort contact by name and test cases